@@ -59,6 +59,7 @@ bug report - outstanding bugs are listed here:
 * libpam: Add pam_syslog function for unified syslog messages from
   PAM modules (kukuk).
 * pam_tally, pam_time, pam_userdb: use pam_syslog and pam_prompt (ldv)
+* pam_issue: major cleanup (ldv)
 
 0.80: Wed Jul 13 13:23:20 CEST 2005
 * pam_tally: test for NULL data before dereferencing them (t8m)
